--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/target-fields/target-fields.component.html
@@ -32,5 +32,5 @@
     </ng-container>
 </div>
 <div *ngIf="showFormulaEditor" class="formula-builder position-fixed border rounded">
-    <odp-formula-editor [definition]="definition" [(toggle)]="showFormulaEditor"></odp-formula-editor>
+    <odp-formula-editor [edit]="edit" [definition]="definition" [(toggle)]="showFormulaEditor"></odp-formula-editor>
 </div>
