--- a/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/node-mapping/formula-editor/formula-editor.component.scss
@@ -1,4 +1,4 @@
 .code-editor {
-    font-family: monospace;
-    min-height: 300px;
+    min-height: calc(100vh - 250px);
+    max-height: calc(100vh - 250px);
 }
