--- a/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
+++ b/src/app/home/b2b-flows-manage/b2b-flows-manage.component.html
@@ -51,39 +51,39 @@
         </div>
         <div class="flow-designer d-flex">
             <div class="available-nodes border-right h-100">
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-file mr-2"></span>
                     <span class="font-13 fw-400">File Agent</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-invoke-api mr-2"></span>
                     <span class="font-13 fw-400">Invoke API</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-connector mr-2"></span>
                     <span class="font-13 fw-400">Connector</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-data-service mr-2"></span>
                     <span class="font-13 fw-400">Data Service</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-function mr-2"></span>
                     <span class="font-13 fw-400">Function</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-mapping mr-2"></span>
                     <span class="font-13 fw-400">Mapping</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-object mr-2 text-muted"></span>
                     <span class="font-13 fw-400">Code Block</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-expand mr-2"></span>
                     <span class="font-13 fw-400">Change Root</span>
                 </div>
-                <div draggable="true" class="node-item border-bottom px-3 py-2 d-flex align-items-center hover">
+                <div draggable="true" class="node-item border-bottom py-2 d-flex align-items-center hover">
                     <span class="node-icon font-16 fw-400 dsi dsi-response mr-2"></span>
                     <span class="font-13 fw-400">Response</span>
                 </div>
