--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -44,7 +44,7 @@
             <span class="text-muted"><i>(optional)</i></span>
         </label>
         <small class="form-text text-muted mb-3">Set the data structure that this node will return</small>
-        <odp-data-structure-selector [format]="currNode.dataStructure.outgoing" (formatChange)="onFormatChange($event)">
+        <odp-data-structure-selector [edit]="edit" [format]="currNode.dataStructure.outgoing" (formatChange)="onFormatChange($event)">
         </odp-data-structure-selector>
     </div>
     <ng-container *ngIf="!prevNode">
@@ -180,17 +180,17 @@
             <label class="font-14 fw-300 text-dark" for="nodeUnWind">Change Root Path</label>
             <input id="nodeUnWind" type="text" class="form-control dynamic-variable-addon"
                 [(ngModel)]="currNode.options.unwindPath" (ngModelChange)="changesDone.emit()">
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList"
+            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList"
                 [(value)]="currNode.options.unwindPath">
             </odp-node-data-selector>
         </div>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='CONNECTOR'">
-        <odp-connector-properties [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
+        <odp-connector-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
         </odp-connector-properties>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='DATASERVICE'">
-        <odp-data-service-properties [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
+        <odp-data-service-properties [edit]="edit" [nodeList]="nodeList" [currNode]="currNode" [prevNode]="prevNode">
         </odp-data-service-properties>
     </ng-container>
     <ng-container *ngIf="currNode?.type=='FUNCTION'">
@@ -236,7 +236,7 @@
             <label class="font-14 fw-300 text-dark" for="nodeStatusCode">Status Code</label>
             <input id="nodeStatusCode" type="text" class="form-control dynamic-variable-addon"
                 [(ngModel)]="currNode.options.statusCode" (ngModelChange)="changesDone.emit()">
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            <odp-node-data-selector class="node-data-selector" [edit]="edit" [nodeList]="nodeList" [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
         <div class="form-group position-relative">
@@ -257,7 +257,7 @@
             <label class="font-14 fw-300 text-dark" for="nodeBody">Body</label>
             <textarea id="nodeBody" class="form-control dynamic-variable-addon" cols="30" rows="4"
                 [(ngModel)]="currNode.options.body"></textarea>
-            <odp-node-data-selector class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
+            <odp-node-data-selector [edit]="edit" class="node-data-selector" [nodeList]="nodeList" [(value)]="currNode.options.body">
             </odp-node-data-selector>
         </div>
     </ng-container>
