--- a/src/app/apps/apps.component.html
+++ b/src/app/apps/apps.component.html
@@ -228,6 +228,20 @@
                 }">Groups</span>
             </div>
           </div>
+          <div *ngIf="hasAPIKeyPermission" #apiKeyRoute="routerLinkActive"
+            class="icon-block d-flex align-items-center my-3"
+            [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
+            routerLinkActive="text-primary bg-white active" [routerLink]="['api-keys']" id="_apiKeys">
+            <div class="d-flex align-items-center ml-1">
+              <span [ngClass]="{'nav-inactive':!apiKeyRoute.isActive}" class="dsi dsi-id"></span>
+              <span *ngIf="showSideNav" class="text items font-14" [ngClass]="{
+                  'fw-600 nav-active': apiKeyRoute.isActive,
+                  'nav-inactive': !apiKeyRoute.isActive
+                }">API Keys
+                <span class="text-uppercase ml-2 text-primary font-10">(beta)</span>
+              </span>
+            </div>
+          </div>
           <div *ngIf="hasInsightsPermission" #insightRoute="routerLinkActive"
             class="icon-block d-flex align-items-center my-3"
             [ngClass]="{'justify-content-between':showSideNav, 'justify-content-center':!showSideNav}"
