--- a/src/app/home/agents/agent-view/agent-view.component.html
+++ b/src/app/home/agents/agent-view/agent-view.component.html
@@ -1,11 +1,11 @@
-<!-- <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
+<div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
     <div class="align-self-center text-center">
         <div class="spinner-border text-dark" role="status">
             <span class="sr-only">Processing...</span>
         </div>
         <div class="text-secondary mt-2">Processing...</div>
     </div>
-</div> -->
+</div>
 <div class="d-flex flex-column w-100 h-100 position-relative bg-light-gray">
     <div class="wrapper">
         <div class="w-100 position-relative px-4 pt-5 d-flex" *ngIf="agentDetails">
@@ -100,90 +100,25 @@
                     </div>
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">IP Address</label>
-                        <span class="fw-500 text-dark">{{agentLogObject[0]?.ipAddress}}</span>
+                        <span class="fw-500 text-dark">{{agentDetails?.ipAddress}}</span>
                     </div>
                     <div class="d-flex flex-column mr-5">
                         <label class="font-12 text-secondary">Mac Address</label>
-                        <span class="fw-500 text-dark">{{agentLogObject[0]?.macAddress}}</span>
+                        <span class="fw-500 text-dark">{{agentDetails?.macAddress}}</span>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="d-flex flex-column px-4 pb-4 bg-white">
-            <div class="grid-container position-relative mt-3" *ngIf="completeLogs.length > 0">
-                <div class="list-group">
-                    <div
-                        class="list-group-item header py-0 bg-light text-uppercase font-11 fw-500 d-flex align-items-center">
-                        <div class="d-flex align-items-center justify-content-start h-100">
-                            <div (click)="applySort('Timestamp')" class="item-timestamp">
-                                <span class="mr-2">Timestamp</span>
-                                <span *ngIf="sortModel['timestamp']==1" class="dsi dsi-drop-down"></span>
-                                <span *ngIf="sortModel['timestamp']==-1" class="dsi dsi-drop-up"></span>
-                            </div>
-                            <div (click)="applySort('level')" class="item-level">
-                                <span class="mr-2">Level</span>
-                                <span *ngIf="sortModel['level']==1" class="dsi dsi-drop-down"></span>
-                                <span *ngIf="sortModel['level']==-1" class="dsi dsi-drop-up"></span>
-                            </div>
-                            <div (click)="applySort('message')" class="item-message">
-                                <span class="mr-2">Message</span>
-                                <span *ngIf="sortModel['message']==1" class="dsi dsi-drop-down"></span>
-                                <span *ngIf="sortModel['message']==-1" class="dsi dsi-drop-up"></span>
-                            </div>
-                            <!-- <div class="item-actions">&nbsp;</div> -->
-                        </div>
-                    </div>
-                    <div class="list-group-item header py-0 font-11 fw-500 d-flex align-items-center">
-                        <div class="d-flex align-items-center justify-content-start h-100">
-                            <div class="item-timestamp">
-                            </div>
-                            <div class="item-level">
-                                <select class="form-control font-11" style="width: 60%; height: 30px"
-                                    (change)="filterLevel($event)">
-                                    <option class="font-11" value="ALL">ALL</option>
-                                    <option class="font-11" value="TRACE">TRACE</option>
-                                    <option class="font-11" value="DEBUG">DEBUG</option>
-                                    <option class="font-11" value="INFO">INFO</option>
-                                    <option class="font-11" value="ERROR">ERROR</option>
-                                </select>
-                            </div>
-                            <!-- <div class="item-actions">&nbsp;</div> -->
-                        </div>
-                    </div>
-                    <ng-container *ngFor="let agent of agentLogObject;let i=index">
-                        <div class="list-group-item">
-                            <div class="d-flex align-items-center justify-content-start h-100">
-                                <div class="item-timestamp text-truncate fw-500">{{agent?.timestamp &&
-                                    convertDate(agent.timestamp )}}</div>
-                                <div class="item-level ">
-                                    <span class="font-11 fw-500 status" [ngClass]="{
-                                    'text-success': agent.logLevel === 'TRACE',
-                                    'text-warning': agent.logLevel === 'DEBUG',
-                                    'text-danger': agent.logLevel === 'ERROR',
-                                    'text-info': agent.logLevel === 'INFO'
-                                  }">{{agent.logLevel}}</span>
-                                </div>
-                                <div class="item-message text-secondary">{{agent.message}}</div>
-                            </div>
-                        </div>
-                    </ng-container>
-                </div>
+        <div class="d-flex flex-column px-4 pb-4 bg-light">
+            <div class="tab-list d-flex align-items-stretch justify-content-start px-3 bg-white rounded border">
+                <div class="tab-list-item py-3 text-center" [ngClass]="{'active fw-500':selectedTab==0}"
+                    (click)="selectedTab=0">Logs</div>
+                <div class="tab-list-item py-3 text-center" [ngClass]="{'active fw-500':selectedTab==1}"
+                    (click)="selectedTab=1">Sessions</div>
             </div>
-            <div class="default-loader d-flex justify-content-center w-100 h-100" *ngIf="showLazyLoader">
-                <div class="align-self-center text-center">
-                    <div class="spinner-border text-dark" role="status">
-                        <span class="sr-only">Processing...</span>
-                    </div>
-                    <div class="text-secondary mt-2">Processing...</div>
-                </div>
-            </div>
-            <div class="d-flex flex-column" *ngIf="agentLogObject.length === 0">
-                <span class="no-logs">
-                </span>
-                <div class="d-flex flex-column mx-auto">
-                    <span class="font-20 fw-600">No Logs Generated</span>
-                    <span>Activate agent to generate logs</span>
-                </div>
+            <div class="tab-container">
+                <odp-agent-logs *ngIf="selectedTab==0" [agentDetails]="agentDetails"></odp-agent-logs>
+                <odp-agent-sessions *ngIf="selectedTab==1" [agentDetails]="agentDetails"></odp-agent-sessions>
             </div>
         </div>
     </div>
